--- a/css/style.css
+++ b/css/style.css
@@ -47,6 +47,7 @@ body {
     display: flex;
     justify-content: space-between;
     flex-direction: row-reverse;
+    gap: 20px;
     max-width: 1024px;
     margin: 0 auto;
     padding: 20px 10px;
